#Add Modul Billing

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=IDEV;Database=KMSI_CourseManagement;User ID=sa;Password=080106;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=false"
   },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "UseStartTls": true,
+    "Username": "your-email@gmail.com",
+    "Password": "your-app-password",
+    "FromEmail": "your-email@gmail.com",
+    "FromName": "Kawai Music School Indonesia"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
